crates/viewer/dl_dataframe_ui/tests/snapshots/filter_tests__boolean_equals_list_non_nullable@no_null_true.snap
---
source: crates/viewer/dl_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NonNullableBoolean(
        IsTrue,
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Boolean,
            },
        ),
    },
    unfiltered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      BooleanArray
    [
      false,
    ],
      BooleanArray
    [
      true,
      true,
    ],
      BooleanArray
    [
      false,
      false,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
    filtered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      BooleanArray
    [
      true,
      true,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
}
