crates/viewer/dl_dataframe_ui/tests/snapshots/filter_tests__boolean_equals_list_nullable@inner_null_is_null.snap
---
source: crates/viewer/dl_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: NullableBoolean(
        NullableBooleanFilter(IsNull),
    ),
    field: Field {
        name: "column",
        data_type: List(
            Field {
                name: "column",
                data_type: Boolean,
                nullable: true,
            },
        ),
    },
    unfiltered: ListArray
    [
      BooleanArray
    [
      true,
    ],
      BooleanArray
    [
      false,
    ],
      BooleanArray
    [
      null,
      true,
    ],
      BooleanArray
    [
      false,
      null,
    ],
      BooleanArray
    [
      true,
      false,
    ],
    ],
    filtered: ListArray
    [
      BooleanArray
    [
      null,
      true,
    ],
      BooleanArray
    [
      false,
      null,
    ],
    ],
}
